service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  type: NodePort
  selector:
    app: back2
  ports:
    - port: 8087
      targetPort: 8087
      nodePort: 32000
