ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
  namespace: default
spec:
  defaultBackend:
    resource:
      kind: StorageBucket
      name: back-service
  rules:
  - host: "altersis.test.com" 
    http:
      paths:
      - path: /employee/all
        pathType: Prefix
        backend:
         service:
          name: back-service
          port:
           number: 8087
